Adcionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem nostrum voluptate unde praesentium porro dolorum inventore! Facilis repellendus ipsam accusantium eius earum quibusdam quod velit voluptatibus itaque hic. Voluptate, dicta.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus aut alias qui quidem dignissimos, maxime necessitatibus consectetur cum, vitae esse explicabo praesentium voluptatem, earum rem? Architecto explicabo est beatae id.</p>
 </body>
 </html>
